# paper-trading-engine

./: .coverage  .gitignore  .gitmodules  pyproject.toml
paper_trading/adapters/: data_adapter.py  strategy_adapter.py
paper_trading/backtest/: engine.py
paper_trading/core/: interfaces.py  types.py
scripts/: run_vol_arb_backtest.py
tests/: test_adapters.py  test_backtest_engine.py  test_integration.py
