[tool.poetry]
name = "paper-trading-engine"
version = "0.1.0"
description = "Unified paper trading system integrating multiple strategies"
authors = ["Will Hammond"]
readme = "README.md"
packages = [{include = "paper_trading"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
pandas = "^2.1.0"
scipy = "^1.11.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
yfinance = "^0.2.33"
python-dateutil = "^2.8.2"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.0"
pyarrow = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
black = "^23.11.0"
ruff = "^0.1.6"
pandas-stubs = "^2.1.0"
types-pyyaml = "^6.0.12"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=paper_trading",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
